# Agent-Co-Learning

./: Overview.md  Plan.md  Running_report.md  Walkthrough.md  out_linear.txt  phase-1-validation.py  phase-2-validation.py  phase-3-validation.py  phase-4-validation.py  phase1_exploration_report.ipynb  phase4_evaluation_report.ipynb  pyproject.toml  run_experiment.py  run_phase1.py  run_phase2.py  run_phase3.py  validate_experiment.py  validate_learning.py
configs/: phase1.yaml  phase2.yaml  phase3.yaml  phase5_expert.yaml  phase5_expert_linear.yaml  phase6_game_theory.yaml  phase7_true_nash.yaml
outputs/phase5_expert/aggregate/: run_index.parquet
outputs/phase5_expert/checkpoints/: seed_01000_policy.npz  seed_01001_policy.npz  seed_01002_policy.npz  seed_01003_policy.npz  seed_01004_policy.npz
outputs/phase5_expert/runs/: seed_01000_summary.parquet  seed_01001_summary.parquet  seed_01002_summary.parquet  seed_01003_summary.parquet  seed_01004_summary.parquet
outputs/phase6_game_theory/aggregate/: run_index.parquet
scratch/: test_inferences.py
scripts/: analyze_data.py  generate_notebook.py  generate_plots.py  generate_report_plots.py  run_ablations.py  run_expert.py  run_expert_linear.py  run_phase6_game_theory.py
src/twmacl/: __init__.py  baselines.py  cli.py  config.py  diagnostics.py  experiment_cli.py  logging_io.py  market.py  metrics.py  observation.py  phase2_cli.py  phase2_runner.py  phase3_cli.py  phase3_runner.py  policies.py  portfolio.py  predictors.py  runner.py  trust.py  unified_runner.py
tests/: test_core_math.py
(+36 files in other folders)
