[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-weighted-macl"
version = "0.1.0"
description = "Phase 1 exploratory and Phase 2 baseline-learning scaffold for trust-weighted multi-agent co-learning"
readme = "Overview.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.scripts]
phase1-run = "twmacl.cli:main"
phase2-run = "twmacl.phase2_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
